...
) {
    Scaffold(
        floatingActionButton = {
            FloatingActionButton(
                onClick = onAddInspectionClick,
                modifier = Modifier
                    .semantics { testTagsAsResourceId = true}.testTag("cta_add_inspection")
            ) {
                Text("+")
            }
        }
    ) { padding ->
        when {
...
                    modifier = Modifier
                        .fillMaxSize()
                        .padding(padding),
                    contentAlignment = Alignment.Center
                ) {
                    Text(
                        text = "Tidak ada inspeksi.",
                        style = MaterialTheme.typography.bodyMedium
                    )
                }
            }

            else -> {
...
